crates/fixtures/tests/snapshots/hostile__frame_shorter_than_a_line.snap
---
source: crates/fixtures/tests/hostile.rs
expression: snapshot.to_json()
---
{
  "revision": [
    [
      1,
      103
    ]
  ],
  "adapter": {
    "name": "harfrust",
    "version": "0.13.3",
    "platform_independent": true
  },
  "composer": "greedy",
  "medium": {
    "width": 430080,
    "height": 307200
  },
  "settings": {
    "max_pages": 1000,
    "paragraph_spacing": 8192,
    "annotation_spacing": 4096
  },
  "template": {
    "name": "sliver",
    "source": "document"
  },
  "pages": [
    {
      "width": 307200,
      "height": 204800
    }
  ],
  "frames": [
    {
      "name": "sliver",
      "role": {
        "flow": "main"
      },
      "page": 0,
      "to_page": {
        "xx": 65536,
        "yx": 0,
        "xy": 0,
        "yy": 65536,
        "tx": 20480,
        "ty": 20480
      },
      "rect": {
        "origin": {
          "x": 0,
          "y": 0
        },
        "width": 153600,
        "height": 4096
      }
    },
    {
      "name": "margin",
      "role": "margin",
      "page": 0,
      "to_page": {
        "xx": 65536,
        "yx": 0,
        "xy": 0,
        "yy": 65536,
        "tx": 194560,
        "ty": 20480
      },
      "rect": {
        "origin": {
          "x": 0,
          "y": 0
        },
        "width": 92160,
        "height": 4096
      }
    }
  ],
  "blocks": [
    {
      "node": "8@1",
      "kind": "paragraph",
      "style": {
        "family": "Source Serif Pro",
        "size": 11264,
        "line_height": 13517,
        "explain": {
          "family": "default",
          "line-height": "default",
          "size": "style body"
        }
      },
      "lines": [
        {
          "frame": 0,
          "text": {
            "start": 0,
            "end": 31
          },
          "preview": "Two lines at least, in a frame",
          "rect": {
            "origin": {
              "x": 0,
              "y": 0
            },
            "width": 153600,
            "height": 13517
          },
          "baseline": 10707,
          "width": 143001,
          "explanation": {
            "reason": "opportunity",
            "score": null,
            "adjustment": {
              "word_spacing": 0,
              "letter_spacing": 0
            },
            "reshaped": false
          },
          "runs": [
            {
              "range": {
                "start": 0,
                "end": 31
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 11264,
              "level": 0,
              "x": 0,
              "width": 145626
            }
          ]
        },
        {
          "frame": 0,
          "text": {
            "start": 31,
            "end": 47
          },
          "preview": "that holds none.",
          "rect": {
            "origin": {
              "x": 0,
              "y": 13517
            },
            "width": 153600,
            "height": 13517
          },
          "baseline": 24224,
          "width": 81182,
          "explanation": {
            "reason": "end",
            "score": null,
            "adjustment": {
              "word_spacing": 0,
              "letter_spacing": 0
            },
            "reshaped": false
          },
          "runs": [
            {
              "range": {
                "start": 31,
                "end": 47
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 11264,
              "level": 0,
              "x": 0,
              "width": 81182
            }
          ]
        }
      ]
    },
    {
      "node": "77@1",
      "kind": "paragraph",
      "style": {
        "family": "Source Serif Pro",
        "size": 11264,
        "line_height": 13517,
        "explain": {
          "family": "default",
          "line-height": "default",
          "size": "style body"
        }
      },
      "lines": [
        {
          "frame": 0,
          "text": {
            "start": 0,
            "end": 23
          },
          "preview": "And a second paragraph.",
          "rect": {
            "origin": {
              "x": 0,
              "y": 35226
            },
            "width": 153600,
            "height": 13517
          },
          "baseline": 45933,
          "width": 124921,
          "explanation": {
            "reason": "end",
            "score": null,
            "adjustment": {
              "word_spacing": 0,
              "letter_spacing": 0
            },
            "reshaped": false
          },
          "runs": [
            {
              "range": {
                "start": 0,
                "end": 23
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 11264,
              "level": 0,
              "x": 0,
              "width": 124921
            }
          ]
        }
      ]
    },
    {
      "node": "59@1",
      "kind": "annotation",
      "style": {
        "family": "Source Serif Pro",
        "size": 8448,
        "line_height": 10560,
        "explain": {
          "family": "default",
          "line-height": "style note",
          "size": "style note"
        }
      },
      "lines": [
        {
          "frame": 1,
          "text": {
            "start": 0,
            "end": 7
          },
          "preview": "A note.",
          "rect": {
            "origin": {
              "x": 0,
              "y": 0
            },
            "width": 92160,
            "height": 10560
          },
          "baseline": 8241,
          "width": 26592,
          "explanation": {
            "reason": "end",
            "score": null,
            "adjustment": {
              "word_spacing": 0,
              "letter_spacing": 0
            },
            "reshaped": false
          },
          "runs": [
            {
              "range": {
                "start": 0,
                "end": 7
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 8448,
              "level": 0,
              "x": 0,
              "width": 26592
            }
          ]
        }
      ]
    }
  ],
  "relations": [
    {
      "id": "75@1",
      "schema": "reprise.follow",
      "owner": "59@1",
      "status": "valid",
      "applied": true,
      "targets": [
        {
          "role": "line",
          "status": "valid",
          "resolved": {
            "line": {
              "node": "8@1",
              "line": 0
            }
          }
        }
      ]
    }
  ],
  "diagnostics": [
    {
      "severity": "warning",
      "code": "layout.frame-overflow",
      "subject": {
        "kind": "node",
        "id": "8@1"
      },
      "message": "a line is taller than every frame of the main flow; placed overflowing",
      "bytes": null
    },
    {
      "severity": "warning",
      "code": "layout.frame-overflow",
      "subject": {
        "kind": "node",
        "id": "77@1"
      },
      "message": "a line is taller than every frame of the main flow; placed overflowing",
      "bytes": null
    },
    {
      "severity": "warning",
      "code": "layout.frame-overflow",
      "subject": {
        "kind": "node",
        "id": "59@1"
      },
      "message": "runs past the bottom of the margin frame",
      "bytes": null
    }
  ]
}
