crates/fixtures/tests/snapshots/hostile__image_float.snap
---
source: crates/fixtures/tests/hostile.rs
expression: snapshot.to_json()
---
{
  "revision": [
    [
      1,
      135
    ]
  ],
  "adapter": {
    "name": "harfrust",
    "version": "0.13.3",
    "platform_independent": true
  },
  "composer": "greedy",
  "medium": {
    "width": 430080,
    "height": 307200
  },
  "settings": {
    "max_pages": 1000,
    "paragraph_spacing": 8192,
    "annotation_spacing": 4096
  },
  "template": {
    "name": "regions",
    "source": "document"
  },
  "pages": [
    {
      "width": 102400,
      "height": 61440
    },
    {
      "width": 102400,
      "height": 61440
    }
  ],
  "frames": [
    {
      "name": "body",
      "role": {
        "flow": "main"
      },
      "page": 0,
      "to_page": {
        "xx": 65536,
        "yx": 0,
        "xy": 0,
        "yy": 65536,
        "tx": 0,
        "ty": 0
      },
      "rect": {
        "origin": {
          "x": 0,
          "y": 0
        },
        "width": 102400,
        "height": 61440
      }
    },
    {
      "name": "notes",
      "role": "notes",
      "page": 0,
      "to_page": {
        "xx": 65536,
        "yx": 0,
        "xy": 0,
        "yy": 65536,
        "tx": 0,
        "ty": 0
      },
      "rect": {
        "origin": {
          "x": 0,
          "y": 0
        },
        "width": 102400,
        "height": 61440
      }
    },
    {
      "name": "body",
      "role": {
        "flow": "main"
      },
      "page": 1,
      "to_page": {
        "xx": 65536,
        "yx": 0,
        "xy": 0,
        "yy": 65536,
        "tx": 0,
        "ty": 0
      },
      "rect": {
        "origin": {
          "x": 0,
          "y": 0
        },
        "width": 102400,
        "height": 61440
      }
    },
    {
      "name": "notes",
      "role": "notes",
      "page": 1,
      "to_page": {
        "xx": 65536,
        "yx": 0,
        "xy": 0,
        "yy": 65536,
        "tx": 0,
        "ty": 0
      },
      "rect": {
        "origin": {
          "x": 0,
          "y": 0
        },
        "width": 102400,
        "height": 61440
      }
    }
  ],
  "blocks": [
    {
      "node": "14@1",
      "kind": "paragraph",
      "style": {
        "family": "Source Serif Pro",
        "size": 10240,
        "line_height": 12288,
        "explain": {
          "family": "default",
          "line-height": "style body",
          "size": "style body"
        }
      },
      "lines": [
        {
          "frame": 0,
          "text": {
            "start": 0,
            "end": 12
          },
          "preview": "Anchor text",
          "rect": {
            "origin": {
              "x": 0,
              "y": 0
            },
            "width": 64171,
            "height": 12288
          },
          "baseline": 9733,
          "width": 53646,
          "explanation": {
            "reason": "opportunity",
            "score": null,
            "adjustment": {
              "word_spacing": 0,
              "letter_spacing": 0
            },
            "reshaped": false
          },
          "runs": [
            {
              "range": {
                "start": 0,
                "end": 12
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 10240,
              "level": 0,
              "x": 0,
              "width": 56032
            }
          ]
        },
        {
          "frame": 0,
          "text": {
            "start": 12,
            "end": 25
          },
          "preview": "flows around",
          "rect": {
            "origin": {
              "x": 0,
              "y": 12288
            },
            "width": 64171,
            "height": 12288
          },
          "baseline": 22021,
          "width": 59330,
          "explanation": {
            "reason": "opportunity",
            "score": null,
            "adjustment": {
              "word_spacing": 0,
              "letter_spacing": 0
            },
            "reshaped": false
          },
          "runs": [
            {
              "range": {
                "start": 12,
                "end": 25
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 10240,
              "level": 0,
              "x": 0,
              "width": 61716
            }
          ]
        },
        {
          "frame": 0,
          "text": {
            "start": 25,
            "end": 41
          },
          "preview": "the image. More",
          "rect": {
            "origin": {
              "x": 0,
              "y": 24576
            },
            "width": 102400,
            "height": 12288
          },
          "baseline": 34309,
          "width": 74168,
          "explanation": {
            "reason": "opportunity",
            "score": null,
            "adjustment": {
              "word_spacing": 0,
              "letter_spacing": 0
            },
            "reshaped": false
          },
          "runs": [
            {
              "range": {
                "start": 25,
                "end": 41
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 10240,
              "level": 0,
              "x": 0,
              "width": 76554
            }
          ]
        },
        {
          "frame": 0,
          "text": {
            "start": 41,
            "end": 62
          },
          "preview": "words flow below the",
          "rect": {
            "origin": {
              "x": 0,
              "y": 36864
            },
            "width": 102400,
            "height": 12288
          },
          "baseline": 46597,
          "width": 96819,
          "explanation": {
            "reason": "opportunity",
            "score": null,
            "adjustment": {
              "word_spacing": 0,
              "letter_spacing": 0
            },
            "reshaped": false
          },
          "runs": [
            {
              "range": {
                "start": 41,
                "end": 62
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 10240,
              "level": 0,
              "x": 0,
              "width": 99205
            }
          ]
        },
        {
          "frame": 0,
          "text": {
            "start": 62,
            "end": 80
          },
          "preview": "image in the same",
          "rect": {
            "origin": {
              "x": 0,
              "y": 49152
            },
            "width": 102400,
            "height": 12288
          },
          "baseline": 58885,
          "width": 82984,
          "explanation": {
            "reason": "opportunity",
            "score": null,
            "adjustment": {
              "word_spacing": 0,
              "letter_spacing": 0
            },
            "reshaped": false
          },
          "runs": [
            {
              "range": {
                "start": 62,
                "end": 80
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 10240,
              "level": 0,
              "x": 0,
              "width": 85370
            }
          ]
        },
        {
          "frame": 2,
          "text": {
            "start": 80,
            "end": 86
          },
          "preview": "frame.",
          "rect": {
            "origin": {
              "x": 0,
              "y": 0
            },
            "width": 102400,
            "height": 12288
          },
          "baseline": 9733,
          "width": 30228,
          "explanation": {
            "reason": "end",
            "score": null,
            "adjustment": {
              "word_spacing": 0,
              "letter_spacing": 0
            },
            "reshaped": false
          },
          "runs": [
            {
              "range": {
                "start": 80,
                "end": 86
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 10240,
              "level": 0,
              "x": 0,
              "width": 30228
            }
          ]
        }
      ]
    },
    {
      "node": "104@1",
      "kind": "image",
      "style": {
        "family": "Source Serif Pro",
        "size": 10240,
        "line_height": 12288,
        "explain": {
          "family": "default",
          "line-height": "style note",
          "size": "style note"
        }
      },
      "lines": [
        {
          "frame": 0,
          "text": {
            "start": 0,
            "end": 20
          },
          "preview": "An image in a region",
          "rect": {
            "origin": {
              "x": 68267,
              "y": 0
            },
            "width": 24576,
            "height": 12288
          },
          "baseline": 0,
          "width": 24576,
          "explanation": {
            "reason": "end",
            "score": null,
            "adjustment": {
              "word_spacing": 0,
              "letter_spacing": 0
            },
            "reshaped": false
          },
          "runs": []
        }
      ],
      "image": {
        "asset": "c09761ac120fc25444687b1ab5e85cac0e3ad41391d8d68e5473fbe8d5bc07f9",
        "alt": "An image in a region",
        "frame": 0,
        "rect": {
          "origin": {
            "x": 68267,
            "y": 0
          },
          "width": 24576,
          "height": 12288
        },
        "placeholder": false
      }
    }
  ],
  "relations": [
    {
      "id": "134@1",
      "schema": "reprise.float",
      "owner": "104@1",
      "status": "valid",
      "applied": true,
      "targets": [
        {
          "role": "anchor",
          "status": "valid",
          "resolved": {
            "range": {
              "node": "14@1",
              "bytes": {
                "start": 0,
                "end": 1
              }
            }
          }
        }
      ]
    }
  ],
  "diagnostics": []
}
