crates/fixtures/tests/snapshots/hostile__image_note.snap
---
source: crates/fixtures/tests/hostile.rs
expression: snapshot.to_json()
---
{
  "revision": [
    [
      1,
      135
    ]
  ],
  "adapter": {
    "name": "harfrust",
    "version": "0.13.3",
    "platform_independent": true
  },
  "composer": "greedy",
  "medium": {
    "width": 430080,
    "height": 307200
  },
  "settings": {
    "max_pages": 1000,
    "paragraph_spacing": 8192,
    "annotation_spacing": 4096
  },
  "template": {
    "name": "regions",
    "source": "document"
  },
  "pages": [
    {
      "width": 102400,
      "height": 61440
    },
    {
      "width": 102400,
      "height": 61440
    }
  ],
  "frames": [
    {
      "name": "body",
      "role": {
        "flow": "main"
      },
      "page": 0,
      "to_page": {
        "xx": 65536,
        "yx": 0,
        "xy": 0,
        "yy": 65536,
        "tx": 0,
        "ty": 0
      },
      "rect": {
        "origin": {
          "x": 0,
          "y": 0
        },
        "width": 102400,
        "height": 61440
      }
    },
    {
      "name": "notes",
      "role": "notes",
      "page": 0,
      "to_page": {
        "xx": 65536,
        "yx": 0,
        "xy": 0,
        "yy": 65536,
        "tx": 0,
        "ty": 0
      },
      "rect": {
        "origin": {
          "x": 0,
          "y": 0
        },
        "width": 102400,
        "height": 61440
      }
    },
    {
      "name": "body",
      "role": {
        "flow": "main"
      },
      "page": 1,
      "to_page": {
        "xx": 65536,
        "yx": 0,
        "xy": 0,
        "yy": 65536,
        "tx": 0,
        "ty": 0
      },
      "rect": {
        "origin": {
          "x": 0,
          "y": 0
        },
        "width": 102400,
        "height": 61440
      }
    },
    {
      "name": "notes",
      "role": "notes",
      "page": 1,
      "to_page": {
        "xx": 65536,
        "yx": 0,
        "xy": 0,
        "yy": 65536,
        "tx": 0,
        "ty": 0
      },
      "rect": {
        "origin": {
          "x": 0,
          "y": 0
        },
        "width": 102400,
        "height": 61440
      }
    }
  ],
  "blocks": [
    {
      "node": "14@1",
      "kind": "paragraph",
      "style": {
        "family": "Source Serif Pro",
        "size": 10240,
        "line_height": 12288,
        "explain": {
          "family": "default",
          "line-height": "style body",
          "size": "style body"
        }
      },
      "lines": [
        {
          "frame": 0,
          "text": {
            "start": 0,
            "end": 18
          },
          "preview": "Anchor text flows",
          "rect": {
            "origin": {
              "x": 0,
              "y": 0
            },
            "width": 102400,
            "height": 12288
          },
          "baseline": 9733,
          "width": 80086,
          "explanation": {
            "reason": "opportunity",
            "score": null,
            "adjustment": {
              "word_spacing": 0,
              "letter_spacing": 0
            },
            "reshaped": false
          },
          "runs": [
            {
              "range": {
                "start": 0,
                "end": 18
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 10240,
              "level": 0,
              "x": 0,
              "width": 82472
            }
          ]
        },
        {
          "frame": 0,
          "text": {
            "start": 18,
            "end": 36
          },
          "preview": "around the image.",
          "rect": {
            "origin": {
              "x": 0,
              "y": 12288
            },
            "width": 102400,
            "height": 12288
          },
          "baseline": 22021,
          "width": 82953,
          "explanation": {
            "reason": "opportunity",
            "score": null,
            "adjustment": {
              "word_spacing": 0,
              "letter_spacing": 0
            },
            "reshaped": false
          },
          "runs": [
            {
              "range": {
                "start": 18,
                "end": 36
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 10240,
              "level": 0,
              "x": 0,
              "width": 85339
            }
          ]
        },
        {
          "frame": 0,
          "text": {
            "start": 36,
            "end": 52
          },
          "preview": "More words flow",
          "rect": {
            "origin": {
              "x": 0,
              "y": 24576
            },
            "width": 102400,
            "height": 12288
          },
          "baseline": 34309,
          "width": 76309,
          "explanation": {
            "reason": "opportunity",
            "score": null,
            "adjustment": {
              "word_spacing": 0,
              "letter_spacing": 0
            },
            "reshaped": false
          },
          "runs": [
            {
              "range": {
                "start": 36,
                "end": 52
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 10240,
              "level": 0,
              "x": 0,
              "width": 78695
            }
          ]
        },
        {
          "frame": 0,
          "text": {
            "start": 52,
            "end": 71
          },
          "preview": "below the image in",
          "rect": {
            "origin": {
              "x": 0,
              "y": 36864
            },
            "width": 102400,
            "height": 12288
          },
          "baseline": 46597,
          "width": 86456,
          "explanation": {
            "reason": "opportunity",
            "score": null,
            "adjustment": {
              "word_spacing": 0,
              "letter_spacing": 0
            },
            "reshaped": false
          },
          "runs": [
            {
              "range": {
                "start": 52,
                "end": 71
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 10240,
              "level": 0,
              "x": 0,
              "width": 88842
            }
          ]
        },
        {
          "frame": 2,
          "text": {
            "start": 71,
            "end": 86
          },
          "preview": "the same frame.",
          "rect": {
            "origin": {
              "x": 0,
              "y": 0
            },
            "width": 102400,
            "height": 12288
          },
          "baseline": 9733,
          "width": 73757,
          "explanation": {
            "reason": "end",
            "score": null,
            "adjustment": {
              "word_spacing": 0,
              "letter_spacing": 0
            },
            "reshaped": false
          },
          "runs": [
            {
              "range": {
                "start": 71,
                "end": 86
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 10240,
              "level": 0,
              "x": 0,
              "width": 73757
            }
          ]
        }
      ]
    },
    {
      "node": "104@1",
      "kind": "image",
      "style": {
        "family": "Source Serif Pro",
        "size": 10240,
        "line_height": 12288,
        "explain": {
          "family": "default",
          "line-height": "style note",
          "size": "style note"
        }
      },
      "lines": [
        {
          "frame": 1,
          "text": {
            "start": 0,
            "end": 20
          },
          "preview": "An image in a region",
          "rect": {
            "origin": {
              "x": 0,
              "y": 49152
            },
            "width": 24576,
            "height": 12288
          },
          "baseline": 49152,
          "width": 24576,
          "explanation": {
            "reason": "end",
            "score": null,
            "adjustment": {
              "word_spacing": 0,
              "letter_spacing": 0
            },
            "reshaped": false
          },
          "runs": []
        }
      ],
      "image": {
        "asset": "c09761ac120fc25444687b1ab5e85cac0e3ad41391d8d68e5473fbe8d5bc07f9",
        "alt": "An image in a region",
        "frame": 1,
        "rect": {
          "origin": {
            "x": 0,
            "y": 49152
          },
          "width": 24576,
          "height": 12288
        },
        "placeholder": false
      }
    }
  ],
  "relations": [
    {
      "id": "134@1",
      "schema": "reprise.note",
      "owner": "104@1",
      "status": "valid",
      "applied": true,
      "targets": [
        {
          "role": "anchor",
          "status": "valid",
          "resolved": {
            "range": {
              "node": "14@1",
              "bytes": {
                "start": 0,
                "end": 1
              }
            }
          }
        }
      ]
    }
  ],
  "diagnostics": []
}
